[package]
name = "mapmaking"
version = "0.1.0"
authors = ["Stefano Mandelli <linuxfree2@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
num = "0.4.0"
npy = "0.4.0"
npy-derive = "0.4.0"
ndarray-npy = "0.8.0"
ndarray = "0.15.2"
approx = "0.5.0"
colored = "2.0.0"
clap = "2.33.3"
wildmatch = "2.1.0"
num_cpus = "1.13.0"
fftw = "0.7.0"
gnuplot = "0.0.37"
criterion-plot = "0.4.3"
itertools-num = "0.1.3"
rustfft = "6.0.1"

[package.metadata.docs.rs]
# Enable certain features when building docs for docs.rs
features = [ "proptest-support", "compare" ]
