[package]
name = "fft_test"
version = "0.1.0"
authors = ["Stefano Mandelli <linuxfree2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
gnuplot = "0.0.37"
rand = "0.8.4"
npy = "0.4.0"
ndarray-npy = "0.8.0"
ndarray = "0.15.3"
misc = "0.1.0"